<resources>
    <string name="app_name">Beginning With Babble</string>
    <string name="splash">splash</string>
    <string name="userBirthdayHint">BABY\'S BIRTHDAY (MM/DD/YYYY)</string>
    <string name="userFirstNameHint">BABY\'S FIRST NAME</string>
    <string name="userZipCodeHint">ZIP CODE</string>
    <string name="userRequestInfo">All requested information is required.</string>
    <string name="userTapHereFroMore">Please tap here to find out why.</string>
    <string name="userSaveButton">SAVE</string>
    <string name="userBirthdayError">Enter your Baby\'s Birthday in \n\'MM/DD/YYYY\' format \n(ex. 03/31/2016)</string>
    <string name="userBirthdayErrorTitle">Error in Baby\'s Birthday</string>
    <string name="userNameToLongError">Your Baby\'s Name must be less than 20 characters.  Please enter a shorter name.</string>
    <string name="userNameEmptyError">Please enter your Baby\'s First Name.</string>
    <string name="userNameNameErrorTitle">Error in Baby\'s First Name</string>
    <string name="userZipCodeError">Enter Zipcode using 5 numbers \n(ex. 60606)"</string>
    <string name="userZipCodeErrorTitle">Error in Zipcode</string>
    <string name="BabbleError">Babble Error</string>
    <string name="userNotBornYetError">Baby\'s birthday must be at least 1 day ago.  Please try again.</string>
    <string name="okay">OK</string>
    <string name="noPromptsForUser">There were no prompts for the baby\'s age.  Please try again.</string>
    <string name="downloadError">Error downloading.  Please try again."</string>
    <string name="download_in_progress">Download In Progress…</string>
    <string name="almostDone">Almost Done…</string>
    <string name="wrapping_up">Wrapping Up…</string>
    <string name="allTipsSentBetween">First Tip Reminder</string>
    <string name="MaxNumberOfTips">Number of Tips To Send Per Reminder</string>
    <string name="sendTipsToday">Send Tips Today</string>
    <string name="settingSaved">SETTINGS SAVED</string>
    <string name="and">and</string>
    <string name="didYouLikeThis">Did you like this tip?</string>
    <string name="notips">Sorry, no tips right now</string>
    <string name="why">WHY?</string>
    <string name="babyBDay">Baby\'s Birthday?</string>
    <string name="babyFirstName">Baby\'s First Name?</string>
    <string name="babyZipCode">ZipCode?</string>
    <string name="userSave">Could not save user try again</string>
    <string name="babyBdayInfo">By providing your baby\'s birthday, Beginning with Babble can keep track of your child\'s age! This allows the app to send tips that are just right for your child!</string>
    <string name="babyFirstNameInfo">By including your baby\'s first name, the app creates a unique profile for you and your child. This is a secure profile that no else but you can access!</string>
    <string name="babyZipCodeInfo">The app uses your zip code to figure out when to send reminders based on your time zone. You can also change the times that tips are send under \"Settings\" &lt; \"Reminder Setting.\"  </string>
    <string name="backToSettigns">BACK TO SETTIGNS</string>
    <string name="userStartTime">StartTime</string>
    <string name="userEndTime">EndTime</string>
    <string name="noConnection">Please Connect To The Internet To Continue</string>
    <string name="times_are_incorrect">Please Check That The End Time Is After The Start Time</string>
    <string name="notification_message">It is a good time to read to %1$s!.</string>
    <string name="updateDialogTitle">There is updated Content for you to Download.</string>
    <string name="update">Update</string>
    <string name="remindMeLater">Update Later</string>
    <string name="stop">STOP</string>
    <string name="comeBackTommrow">Come back tomorrow for more ways to talk, listen and connect with your baby!</string>
    <string name="babble_update">New Tips Are Available To Download</string>
    <string name="male">Male</string>
    <string name="not_now">Not Now</string>
    <string name="female">Female</string>
    <string name="baby_gender_info">By selecting your baby\'s gender, the app will be able to better personalize tips for you and your child!</string>
    <string name="baby_s_gender">Baby\'s Gender?</string>
    <string name="download_files_info">Please wait while we download tips to your mobile device. Also please do NOT leave this screen as this will disrupt the download process. Thanks!</string>
    <string name="congrats_first_message">You and your child are ready to go. You will get your first tip shortly!</string>
    <string name="congrats_second_message">Remember, you can change the times tips are sent under “Settings.” Get ready to have some fun with your child</string>
    <string name="library_category_title">Click below to search our library for specific Tips.</string>
    <string name="library_category_subtitle">You\'re doing great! Keep it up!</string>
    <string name="update_info">This is a big update with a lot of new tips and features and we need you to reenter your baby information. This is a one time thing. Thank you and enjoy.</string>
    <string name="age_rage_title">You can select the appropriate age level for your child</string>
    <string name="updating">Updating...</string>
    <string name="optional_group_code">Optional Group Code</string>
    <string name="powered_by">Powered by</string>
    <string name="loading_in_progress">Tips are loading</string>
</resources>
