<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:orientation="vertical">

    <EditText
        android:id="@+id/userProfileBirtdayEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/user_info_edit_text_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/userBirthdayHint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColor="@color/grey"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/userProfileFragmentFirstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/user_info_edit_text_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/userFirstNameHint"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textColor="@color/grey"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/userMaleButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/male"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/light_grey"
            app:strokeColor="@color/darkestBlue"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/userFemaleButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/female"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/light_grey"
            app:strokeColor="@color/darkestBlue"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/userNotNowButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/not_now"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/darkestBlue"
            app:strokeColor="@color/darkestBlue"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/userRequestInfo"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/pleaseTapHereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/userTapHereFroMore"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/optionalCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/user_info_edit_text_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/optional_group_code"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textColor="@color/grey"
        android:textSize="17sp" />

    <ImageButton
        android:id="@+id/userProfileSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/settings_save"
        android:textSize="25sp" />


</LinearLayout>