<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />


    <ImageView
        android:id="@+id/tipsSettingsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/home_settings" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tipSettingsFragmentLibararyImageView"
        android:layout_below="@+id/tipsSettingsIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/allTipsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/allTipsSentBetween"
            android:textColor="@android:color/black" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tipSettingsStartTimeTextView"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="5:00 AM"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tipSettingsStartTimeMinusButton"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/white"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tipSettingsStartTimePlusButton"
                android:layout_width="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:text="+"
                android:textColor="@color/dark_green"
                android:textSize="20sp"
                app:backgroundTint="@android:color/white" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/firstTipSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:theme="@style/TipSwitch" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/and"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tipSettingsEndTimeTextView"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="8:00 AM"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

            <Button
                android:id="@+id/tipSettingsEndTimeMinusButton"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/white"
                android:text="-"
                android:textColor="@color/dark_green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tipSettingsEndTimePlusButton"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/white"
                android:text="+"
                android:textColor="@color/dark_green"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/secondTipSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:theme="@style/TipSwitch" />

        </LinearLayout>


        <TextView
            android:id="@+id/maxTipsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/MaxNumberOfTips"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tipSettingsMaxNumberTipTextView"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="3"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal|bold" />


            <Button
                android:id="@+id/tipsettingsMaxNumberTipMinusButton"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/white"
                android:text="-"
                android:textColor="@color/dark_green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tipSettingsMaxTipNumberPlusButton"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/white"
                android:text="+"
                android:textColor="@color/dark_green"
                android:textSize="20sp" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/tipSettingSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/settings_save"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>